tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-module-file-identity.diagnostic
diagnostic error code=M0001 family=module message="module file 'tests/cases/modules/errors/module_identity_source.ari' was already loaded as 'First', not 'Second'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/modules/errors/duplicate-module-file-identity.ari" display="tests/cases/modules/errors/duplicate-module-file-identity.ari" bytes=122
  Label index=0 role=primary source_id=0 source="tests/cases/modules/errors/duplicate-module-file-identity.ari" line=2 column=5 end_line=2 end_column=27 byte_start=41 byte_end=63 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/duplicate-module-file-identity.ari:2:5\n   |\n 2 | mod module_identity_source as Second;\n   |     ^^^^^^^^^^^^^^^^^^^^^^"
